--- a/platform/BUILD.bazel
+++ b/platform/BUILD.bazel
@@ -33,6 +33,9 @@ platform(name = "sys",
 platform(name = "default", parents = ["@local_config_platform//:host"])
 
 ################################################################
+config_setting(name = "linux?",
+               constraint_values = ["@platforms//os:linux"])
+
 config_setting(name = "linux_amd64?",
                constraint_values = ["@platforms//cpu:x86_64",
                                     "@platforms//os:linux"])
