--- a/runtime/BUILD.bazel
+++ b/runtime/BUILD.bazel
@@ -11,13 +11,22 @@ load("//vendor/mustach:cc_mustache.bzl", "cc_mustache")
 
 exports_files(["gen_primitives.sh", "primitives.json", "sync_posix.h"] + glob(["*.c"]))
 
-COPTS_MACOS = ["-std=gnu11"]
-COPTS_LINUX = [
-    "-std=gnu11",
-    "-fexcess-precision=standard",
-    "-fno-tree-vrp"
-]
-COPTS_DEFAULT = ["-std=c11"]
+COPTS_PLATFORM = select({
+    "//platform/build:macos_arm64?": [
+        # < 5.1
+        "-Wno-deprecated-non-prototype"
+        # >= v5.1
+        # "-Wint-conversion",
+        # "-Wstrict-prototypes",
+        # "-Wold-style-definition"
+    ],
+    "//platform/build:linux?": [
+        "-std=gnu11",
+        "-fexcess-precision=standard",
+        "-fno-tree-vrp"
+    ],
+    "//conditions:default": ["-std=c11"]
+})
 
 OPTIMIZATION_FLAGS = select({
     ":dbg?": ["-O0", "-g3"], # -Wall -Werror
@@ -60,7 +69,7 @@ cc_library(
         "//runtime/caml:instruct_h",
         "//runtime/caml:jumptbl_h",
     ],
-    copts = [
+    copts = COPTS_PLATFORM + [
         # "-x", "c",  # makes zig barf on mac
         # "-Wno-deprecated-non-prototype",
         "-ffunction-sections",
@@ -70,10 +79,6 @@ cc_library(
         "$(OC_CFLAGS)",
         "$(OC_CPPFLAGS)",
     ] + select({
-        "//platform/os:macos?": COPTS_MACOS,
-        "//platform/os:linux?": COPTS_LINUX,
-        "//conditions:default": COPTS_DEFAULT
-    }) + select({
         # mac zig: ["-Wno-deprecated-non-prototype"]
         "//conditions:default": []
     }) + select({
@@ -86,6 +91,11 @@ cc_library(
         ],
         "//conditions:default":  []
     }) + OPTIMIZATION_FLAGS
+    # ] + select({
+    #     "//platform/os:macos?": COPTS_MACOS,
+    #     "//platform/os:linux?": COPTS_LINUX,
+    #     "//conditions:default": COPTS_DEFAULT
+    # })
     ,
     linkopts = ["$(OC_LDFLAGS)"]
     + select({
@@ -128,7 +138,7 @@ cc_library(
         "//runtime/caml:fail_h",
         ":hdrs",
     ],
-    copts = [
+    copts = COPTS_PLATFORM + [
         # "-x", "c",  # zig barfs
         # "-fPIC",
         "-Iruntime/caml",
@@ -140,10 +150,6 @@ cc_library(
         # "-Wl,-static",
         # "-Wl,--verbose"
     ] + select({
-        "//platform/os:macos?": COPTS_MACOS,
-        "//platform/os:linux?": COPTS_LINUX,
-        "//conditions:default": COPTS_DEFAULT
-    }) + select({
         "//config/mode:pedantic?": ["-pedantic"],
         "//conditions:default":  []
     }) + select({
@@ -614,7 +620,7 @@ cc_binary(
         "//runtime/caml:jumptbl_h",
         ":primitives_h"
     ],
-    copts = [
+    copts = COPTS_PLATFORM + [
         # zig: warning: '-x c' after last input file has no effect [-Wunused-command-line-argument]
         # "-x", "c",
         "-Iruntime/caml",
@@ -622,12 +628,7 @@ cc_binary(
         "-I$(GENDIR)/runtime/caml",
         "$(OC_CFLAGS)",
         "$(OC_CPPFLAGS)",
-
     ] + select({
-        "//platform/os:macos?": COPTS_MACOS,
-        "//platform/os:linux?": COPTS_LINUX,
-        "//conditions:default": COPTS_DEFAULT
-    }) + select({
         ":fastbuild?": ["-UDEBUG"], # Bazel adds -DDEBUG on macos; why?
         "//conditions:default":  []
     }) + select({
