--- a/asmcomp/BUILD.bazel
+++ b/asmcomp/BUILD.bazel
@@ -16,10 +16,6 @@ load("//config:WARNINGS.bzl", "w")
 # ./boot/ocamlrun ./ocamlopt
 # -nostdlib -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats
 
-
-## warnings
-NAME_OUT_OF_SCOPE_40 = "40"
-
 MODULE_OPTS = []
 SIG_OPTS    = ["-strict-formats"]
 
@@ -265,22 +261,25 @@ compiler_module(
 
         "@platforms//cpu:x86_64": "//asmcomp/amd64:CSE.ml",
         "//config/arch:arm"   : "//asmcomp/arm:CSE.ml",
-        "//config/arch:arm64"   : "//asmcomp/arm64:CSE.ml",
-        "//config/arch:i386"   : "//asmcomp/i386:CSE.ml",
+        "//config/arch:arm64" : "//asmcomp/arm64:CSE.ml",
+        "//config/arch:i386"  : "//asmcomp/i386:CSE.ml",
         "//config/arch:ppc"   : "//asmcomp/power:CSE.ml",
         "//config/arch:riscv64"   : "//asmcomp/riscv:CSE.ml",
         "//config/arch:s390x"   : "//asmcomp/s390x:CSE.ml",
     }, no_match_error = "unknown arch"),
     opts = MODULE_OPTS,
-    warnings = [w.MISSING_MLI_70, w.NAME_OUT_OF_SCOPE_40],
+    warnings = {
+        "disable": [w.MISSING_MLI_70, w.NAME_OUT_OF_SCOPE_40]
+    },
     deps   = [
         ":Cmm",
         ":CSEgen",
         ":Mach",
     ],
-    stdlib_deps = [
-        "//stdlib:Stdlib.Bool", # arm
-    ]
+    stdlib_deps = select({
+        "//config/arch:arm64": ["//stdlib:Stdlib.Bool"],
+        "//conditions:default": []
+    })
 )
 
 compiler_module(
@@ -288,7 +287,9 @@ compiler_module(
     struct = "CSEgen.ml",
     sig    = "CSEgen_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = {
+        "disable": [w.NAME_OUT_OF_SCOPE_40]
+    },
     deps   = [
         ":Cmm",
         ":Mach",
@@ -362,7 +363,9 @@ compiler_module(
         "//config/arch:s390x"   : "//asmcomp/s390x:arch.ml",
     }, no_match_error = "unknown arch"),
     opts = MODULE_OPTS,
-    warnings = [w.MISSING_MLI_70],
+    warnings = {
+        "disable": [w.MISSING_MLI_70]
+    },
     deps   = [
         "//utils:Clflags"
     ],
@@ -929,7 +932,9 @@ build_module(
     name   = "Cvt_emit",
     struct = "cvt_emit_ml",
     opts = MODULE_OPTS,
-    warnings = [w.MISSING_MLI_70],
+    warnings = {
+        "disable": [w.MISSING_MLI_70]
+    },
     stdlib_deps   = [
         # "//stdlib",
         "//stdlib:Primitives",
@@ -1053,7 +1058,9 @@ compiler_module(
     struct = "emitaux.ml",
     sig    = "Emitaux_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = {
+        "disable": [w.NAME_OUT_OF_SCOPE_40]
+    },
     deps   = [
         "//config:Config",
         "//lambda:Debuginfo",
@@ -1200,7 +1207,9 @@ compiler_module(
     struct = "linearize.ml",
     sig    = "Linearize_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = {
+        "disable": [w.NAME_OUT_OF_SCOPE_40]
+    },
     deps   = [
         "//lambda:Debuginfo",
         "//utils:Misc",
@@ -1235,7 +1244,9 @@ compiler_module(
     struct = "linscan.ml",
     sig    = "Linscan_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = {
+        "disable": [w.NAME_OUT_OF_SCOPE_40]
+    },
     deps   = [
         ":Interval",
         ":Proc",
@@ -1318,7 +1329,9 @@ compiler_module(
     struct = "polling.ml",
     sig    = "Polling_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = {
+        "disable": [w.NAME_OUT_OF_SCOPE_40]
+    },
     deps   = [
         "//utils:Misc",
         "//utils:Numbers",
@@ -1414,7 +1427,9 @@ compiler_module(
     struct = "printmach.ml",
     sig    = "Printmach_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = {
+        "disable": [w.NAME_OUT_OF_SCOPE_40]
+    },
     deps   = [
         "//lambda:Debuginfo",
         "//utils:Clflags",
@@ -1598,7 +1613,9 @@ compiler_module(
     struct = "schedgen.ml",
     sig    = "Schedgen_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = {
+        "disable": [w.NAME_OUT_OF_SCOPE_40]
+    },
     deps   = [
         "//utils:Clflags",
         ":Cmm",
@@ -1686,7 +1703,9 @@ compiler_module(
     struct = "selectgen.ml",
     sig    = "Selectgen_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = {
+        "disable": [w.NAME_OUT_OF_SCOPE_40]
+    },
     deps   = [
         "//lambda:Debuginfo",
         "//middle_end:Backend_var",
@@ -1933,7 +1952,9 @@ compiler_module(
     struct = "x86_proc.ml",
     sig    = "X86_proc_cmi",
     opts = MODULE_OPTS,
-    warnings = [w.NAME_OUT_OF_SCOPE_40],
+    warnings = {
+        "disable": [w.NAME_OUT_OF_SCOPE_40]
+    },
     deps   = [
         "//config:Config",
         "//utils:Ccomp",
