--- a/bytecomp/BUILD.bazel
+++ b/bytecomp/BUILD.bazel
@@ -107,15 +107,15 @@ compiler_module(
     name   = "Bytegen",
     struct = "bytegen.ml",
     sig    = "Bytegen_cmi",
-    warnings = [
-        "-ambiguous-name",
-        "-disambiguated-name",
-        "-fragile-match",
-        "-name-out-of-scope",
-        "-open-shadow-identifier",
-        "-open-shadow-label-constructor",
-        "-missing-record-field-pattern",
-    ],
+    warnings = {"disable": [
+        "ambiguous-name",
+        "disambiguated-name",
+        "fragile-match",
+        "name-out-of-scope",
+        "open-shadow-identifier",
+        "open-shadow-label-constructor",
+        "missing-record-field-pattern",
+    ]},
     stdlib_deps = [
         "//stdlib:Stdlib.Array",
         "//stdlib:Stdlib.Int",
@@ -195,15 +195,15 @@ compiler_module(
     struct = "bytelink.ml",
     sig    = "Bytelink_cmi",
     opts = MODULE_OPTS,
-    warnings = [
-        # "-ambiguous-name",
-        # "-disambiguated-name",
-        "-fragile-match",
-        # "-name-out-of-scope",
-        # "-missing-record-field-pattern",
-        # "-open-shadow-identifier",
-        # "-open-shadow-label-constructor",
-    ],
+    warnings = {"disable": [
+        # "ambiguous-name",
+        # "disambiguated-name",
+        "fragile-match",
+        # "name-out-of-scope",
+        # "missing-record-field-pattern",
+        # "open-shadow-identifier",
+        # "open-shadow-label-constructor",
+    ]},
     deps   = [
         "//bytecomp:Opcodes",
         "//config:Config",
@@ -256,15 +256,15 @@ compiler_module(
     struct = "bytepackager.ml",
     sig    = "Bytepackager_cmi",
     opts = MODULE_OPTS,
-    warnings = [
-        # "-ambiguous-name",
-        # "-disambiguated-name",
-        "-fragile-match",
-        # "-name-out-of-scope",
-        "-missing-record-field-pattern",
-        # "-open-shadow-identifier",
-        # "-open-shadow-label-constructor",
-    ],
+    warnings = {"disable": [
+        # "ambiguous-name",
+        # "disambiguated-name",
+        "fragile-match",
+        # "name-out-of-scope",
+        "missing-record-field-pattern",
+        # "open-shadow-identifier",
+        # "open-shadow-label-constructor",
+    ]},
     deps   = [
         "//config:Config",
         "//lambda:Printlambda",
@@ -380,15 +380,15 @@ compiler_module(
     struct = "emitcode.ml",
     sig    = "Emitcode_cmi",
     opts = MODULE_OPTS,
-    warnings = [
-        # "-ambiguous-name",
-        # "-disambiguated-name",
-        "-fragile-match",
-        # "-name-out-of-scope",
-        "-missing-record-field-pattern",
-        # "-open-shadow-identifier",
-        # "-open-shadow-label-constructor",
-    ],
+    warnings = {"disable": [
+        # "ambiguous-name",
+        # "disambiguated-name",
+        "fragile-match",
+        # "name-out-of-scope",
+        "missing-record-field-pattern",
+        # "open-shadow-identifier",
+        # "open-shadow-label-constructor",
+    ]},
     deps   = [
         "//config:Config",
         "//lambda:Translmod",
@@ -525,7 +525,7 @@ compiler_module(
     # makefiles generate opcodes.mli from opcodes.ml - why bother?
     # sig    = ":Opcodes_cmi",
     opts = MODULE_OPTS + ["-open", "Stdlib"],
-    warnings = [w.MISSING_MLI_70],
+    warnings = {"disable": [w.MISSING_MLI_70]},
     stdlib_deps   = ["//stdlib:Stdlib"],
     visibility = [
         "//otherlibs/dynlink:__pkg__",
@@ -630,9 +630,7 @@ compiler_module(
     struct = "printinstr.ml",
     sig    = "Printinstr_cmi",
     opts = MODULE_OPTS,
-    warnings = [
-        "-fragile-match",
-    ],
+    warnings = {"disable": ["fragile-match"]},
     deps   = [
         "//lambda:Lambda",
         "//lambda:Printlambda",
@@ -669,10 +667,11 @@ compiler_module(
     struct = "symtable.ml",
     sig    = "Symtable_cmi",
     opts = MODULE_OPTS,
-    warnings = [
-        "-disambiguated-name",
-        "-fragile-match",
-        "-open-shadow-identifier"],
+    warnings = {"disable": [
+        "disambiguated-name",
+        "fragile-match",
+        "open-shadow-identifier"
+    ]},
     deps   = [
         "//config:Config",
         "//lambda:Runtimedef",
@@ -737,7 +736,7 @@ compiler_module(
     name = "Opnames",
     struct = ":opnames.ml",
     opts = MODULE_OPTS,
-    warnings = [w.MISSING_MLI_70],
+    warnings = {"disable": [w.MISSING_MLI_70]},
     stdlib_deps = ["//stdlib:Stdlib"]
 )
 
