--- a/utils/BUILD.bazel
+++ b/utils/BUILD.bazel
@@ -151,7 +151,7 @@ compiler_module(
     struct = "arg_helper.ml",
     sig    = "Arg_helper_cmi",
     opts = MODULE_OPTS,
-    warnings = ["-ambiguous-name"],
+    warnings = {"disable": ["ambiguous-name"]},
     # open   = ["//stdlib:Stdlib"],
     stdlib_deps   = [
         "//stdlib:Stdlib.List",
@@ -182,11 +182,11 @@ compiler_module(
     struct = "binutils.ml",
     sig    = "Binutils_cmi",
     opts = MODULE_OPTS,
-    warnings = [
-        "-fragile-match",
-        "-ambiguous-name",
-        "-disambiguated-name",
-    ],
+    warnings = {"disable": [
+        "fragile-match",
+        "ambiguous-name",
+        "disambiguated-name",
+    ]},
     # open   = ["//stdlib:Stdlib"],
     stdlib_deps   = [
         "//stdlib:Stdlib.Array",
@@ -293,11 +293,11 @@ compiler_module(
     struct = "clflags.ml",
     sig    = "Clflags_cmi",
     opts = MODULE_OPTS,
-    warnings = [
-        "-fragile-match",
-        "-disambiguated-name",
-        "-name-out-of-scope"
-    ],
+    warnings = {"disable": [
+        "fragile-match",
+        "disambiguated-name",
+        "name-out-of-scope"
+    ]},
     deps   = [
         "//config:Config",
         ":Arg_helper",
@@ -495,10 +495,10 @@ compiler_module(
     struct = "diffing.ml",
     sig    = "Diffing_cmi",
     opts = MODULE_OPTS,
-    warnings = [
-        "-disambiguated-name",
-        "-name-out-of-scope",
-    ],
+    warnings = {"disable": [
+        "disambiguated-name",
+        "name-out-of-scope",
+    ]},
     open   = ["//stdlib:Stdlib"],
     deps   = [
         ":Misc",
@@ -534,11 +534,11 @@ compiler_module(
     sig    = "Diffing_with_keys_cmi",
     opts = MODULE_OPTS,
     open   = ["//stdlib:Stdlib"],
-    warnings = [
-        "-fragile-match",
-        "-disambiguated-name",
-        "-name-out-of-scope",
-    ],
+    warnings = {"disable": [
+        "fragile-match",
+        "disambiguated-name",
+        "name-out-of-scope",
+    ]},
     deps   = [
         ":Diffing",
         ":Misc",
@@ -717,7 +717,7 @@ compiler_module(
     struct = "lazy_backtrack.ml",
     sig    = "Lazy_backtrack_cmi",
     opts = MODULE_OPTS,
-    warnings = ["-fragile-match"],
+    warnings = {"disable": ["fragile-match"]},
     open   = ["//stdlib:Stdlib"],
     stdlib_deps   = [
         "//stdlib:Stdlib",
@@ -1016,7 +1016,7 @@ compiler_module(
     struct = "targetint.ml",
     sig    = "Targetint_cmi",
     opts = MODULE_OPTS,
-    warnings = ["-open-shadow-identifier"],
+    warnings = {"disable": ["open-shadow-identifier"]},
     deps   = [
         ":Misc",
     ],
@@ -1070,11 +1070,11 @@ compiler_module(
     struct = "warnings.ml",
     sig    = "Warnings_cmi",
     opts = MODULE_OPTS,
-    warnings = [
-        "-fragile-match",
-        "-disambiguated-name",
-        "-name-out-of-scope"
-    ],
+    warnings = {"disable": [
+        "fragile-match",
+        "disambiguated-name",
+        "name-out-of-scope"
+    ]},
     deps   = [
         ":Misc",
     ],
